--- a/app/src/main/res/layout/activity_state.xml
+++ b/app/src/main/res/layout/activity_state.xml
@@ -4,6 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     tools:context="com.kooknluke.montanabreweries.State"
     android:background="#3B5998">
 
@@ -24,6 +25,16 @@
         android:id="@+id/lvState"
         android:layout_below="@+id/txtSearchBeer"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-    />
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/StateAV" />
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/StateAV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-6225081440194649/1608265612">
+    </com.google.android.gms.ads.AdView>
 </RelativeLayout>
