--- a/app/src/main/res/layout/activity_beer_info.xml
+++ b/app/src/main/res/layout/activity_beer_info.xml
@@ -4,6 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     tools:context="com.kooknluke.montanabreweries.beerInfo"
     android:background="#3B5998">
 
@@ -55,5 +56,15 @@
         android:layout_below="@+id/tvBeerDescriptionName"
         android:layout_alignLeft="@+id/ivBeerImage"
         android:layout_alignStart="@+id/ivBeerImage" />
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/BeerInfoAV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-6225081440194649/7515198415">
+    </com.google.android.gms.ads.AdView>
 
 </RelativeLayout>
