--- a/app/src/main/res/layout/activity_breweries.xml
+++ b/app/src/main/res/layout/activity_breweries.xml
@@ -4,6 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     tools:context="com.kooknluke.montanabreweries.Breweries"
     android:background="#3B5998">
 
@@ -47,5 +48,15 @@
         android:layout_below="@+id/etSearchBreweries"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/BreweriesAV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-6225081440194649/4701332811">
+    </com.google.android.gms.ads.AdView>
 
 </RelativeLayout>
