--- a/app/src/main/res/layout/activity_town.xml
+++ b/app/src/main/res/layout/activity_town.xml
@@ -4,6 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     tools:context="com.kooknluke.montanabreweries.Town"
     android:background="#3B5998">
 
@@ -24,6 +25,17 @@
         android:id="@+id/lvTown"
         android:layout_below="@+id/txtSearchByTown"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/TownAV" />
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/TownAV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-6225081440194649/3084998819">
+    </com.google.android.gms.ads.AdView>
 
 </RelativeLayout>
