--- a/app/src/main/res/layout/activity_beer_info.xml
+++ b/app/src/main/res/layout/activity_beer_info.xml
@@ -8,6 +8,13 @@
     tools:context="com.kooknluke.montanabreweries.beerInfo"
     android:background="#3B5998">
 
+    <ImageView
+        android:layout_width="@android:dimen/thumbnail_width"
+        android:layout_height="@android:dimen/thumbnail_height"
+        android:id="@+id/ivBeerImage"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,32 +27,27 @@
         android:textStyle="bold"
         android:textSize="20dp" />
 
-    <ImageView
-        android:layout_width="@android:dimen/thumbnail_width"
-        android:layout_height="@android:dimen/thumbnail_height"
-        android:id="@+id/ivBeerImage"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
 
-    <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/tvABV"-->
-        <!--android:textColor="#ffffff"-->
-        <!--android:layout_below="@+id/tvBeerDescriptionName"-->
-        <!--android:layout_alignLeft="@+id/ivBeerImage"-->
-        <!--android:layout_alignStart="@+id/ivBeerImage"-->
-        <!--android:text="@string/ABV" />-->
 
-    <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/tvBreweryName"-->
-        <!--android:textColor="#ffffff"-->
-        <!--android:text="@string/Brewery"-->
-        <!--android:layout_below="@+id/tvABV"-->
-        <!--android:layout_alignLeft="@+id/tvABV"-->
-        <!--android:layout_alignStart="@+id/tvABV" />-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvBreweryName"
+        android:textColor="#ffffff"
+        android:text="@string/Brewery"
+        android:layout_below="@+id/tvBeerDescriptionName"
+        android:layout_alignLeft="@+id/tvABV"
+        android:layout_alignStart="@+id/tvABV" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvABV"
+        android:textColor="#ffffff"
+        android:layout_below="@+id/tvBreweryName"
+        android:layout_alignLeft="@+id/ivBeerImage"
+        android:layout_alignStart="@+id/ivBeerImage"
+        android:text="@string/ABV" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -53,7 +55,7 @@
         android:text="Description"
         android:id="@+id/tvBeerDescription"
         android:textColor="#ffffff"
-        android:layout_below="@+id/tvBeerDescriptionName"
+        android:layout_below="@+id/tvABV"
         android:layout_alignLeft="@+id/ivBeerImage"
         android:layout_alignStart="@+id/ivBeerImage" />
 
