--- a/app/src/main/res/layout/activity_seasons.xml
+++ b/app/src/main/res/layout/activity_seasons.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
-    tools:context="com.kooknluke.montanabreweries.Seasons"
+    tools:context="com.kooknluke.abrewforyou.Seasons"
     android:background="#3B5998">
 
     <TextView
