--- a/app/src/main/res/menu/menu_state.xml
+++ b/app/src/main/res/menu/menu_state.xml
@@ -1,5 +1,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.kooknluke.montanabreweries.State">
+    tools:context="com.kooknluke.abrewforyou.State">
 </menu>
