--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -31,7 +31,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:weightSum="6">
+        android:weightSum="6"
+        android:id="@+id/linearLayout">
 
         <Button
             android:layout_width="match_parent"
